[gd_scene load_steps=7 format=3 uid="uid://l40hahm7j6l"]

[ext_resource type="Script" path="res://nodes/ui/scripts/gui_game_overlay.gd" id="1_t3i7v"]
[ext_resource type="PackedScene" uid="uid://dny75u2i3tq8w" path="res://nodes/ui/gui_sensor_buttons.tscn" id="2_6d6bo"]
[ext_resource type="PackedScene" uid="uid://furbuj34t38t" path="res://nodes/ui/menu_game_over.tscn" id="3_nsvtg"]
[ext_resource type="PackedScene" uid="uid://bw4w5u3hv70j0" path="res://nodes/ui/menu_pause.tscn" id="4_ydskl"]
[ext_resource type="PackedScene" uid="uid://bksr7xyasmmpp" path="res://nodes/ui/menu_options.tscn" id="5_u52qh"]
[ext_resource type="Texture2D" uid="uid://c0huryriawnve" path="res://ui/sprites/screen_border.png" id="6_m4561"]

[node name="IngameUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_t3i7v")

[node name="Controls" parent="." instance=ExtResource("2_6d6bo")]

[node name="GameOver" parent="." instance=ExtResource("3_nsvtg")]
visible = false

[node name="Pause" parent="." instance=ExtResource("4_ydskl")]
visible = false

[node name="Options" parent="." instance=ExtResource("5_u52qh")]
visible = false

[node name="ScreenBorder" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScreenBorderSprite" type="Sprite2D" parent="ScreenBorder"]
position = Vector2(640, 360)
texture = ExtResource("6_m4561")

[connection signal="game_paused" from="Controls" to="." method="_on_controls_game_paused"]
[connection signal="options" from="Pause" to="." method="_on_pause_menu_options"]
[connection signal="resume" from="Pause" to="." method="_on_pause_menu_resume"]
